# cargo-raze-bug

./: Cargo.toml
.cargo/: config
libs/a/: Cargo.toml
