[workspace]
members = [
    "libs/a",
    "libs/b",
]

[workspace.metadata.raze]
genmode = "Remote"
workspace_path = "//cargo"
output_buildfile_suffix = "BUILD.bazel"
package_aliases_dir = "./cargo"
targets = [
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
]
